# WebScraperMercadoPublico

./: .gitignore  README.md  licitaciones.py  licitaciones.spec  logger_config.py  pyproject.toml
