[project]
name = "mercadopublico"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pandas-stubs>=3.0.3.260530",
    "pyinstaller>=6.21.0",
    "requests>=2.34.2",
    "types-openpyxl>=3.1.5.20260518",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.17",
]
